styles/style.css
html {
    background: black;
}

* {
    margin:     0px;
    padding:    0px;
    box-sizing: border-box;
}

::before,
::after {
    box-sizing: inherit;
}

.outer {
    display:       grid;
    width:         100vw;
    height:        100vh;
    justify-items: center;
    align-items:   center;
}

.inner {
    display:            grid;
    grid-template-rows: 1fr 20fr 2fr 1fr;
    width:              100vmin;
    height:             100vmin;
    max-width:          720px;
    max-height:         720px;
    font-family:        sans-serif;
    color:              white;
}

.header {
    margin:          auto;
    text-decoration: none;
    color:           white;
}

.controls {
    margin:         15px auto 15px auto;
    width:          100%;
    text-align:     center;
}

.controls .button {
    margin-left:   20px;
    margin-right:  20px;
    height:        36px;
    width:         36px;
    border-radius: 50%;
    color:         white;
    background:    #5800ff;
}

.controls a {
    padding-top:     7px;
    text-decoration: none;
    display:         inline-block;
}

.controls a:hover,
.controls a:active {
    color:      black;
    background: #00a8ff;
}

#start p,
#end p {
    margin: 15px 0px 15px 0px;
}

#start a,
#end a {
    color: white;
}

#end #cand,
#end #exp,
#end #data {
    width: 100%;
}

.footer {
    margin: 0px auto 0px auto;
}

